Updated to Sparkle 3.0